<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <TextView
            android:id="@+id/tv_exchangeRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/exchange_rate"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <TextView
            android:id="@+id/tv_exchangeRateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_exchangeRate" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/exchange_rate"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_exchangeRateValue" />

        <EditText
            android:id="@+id/tv_amountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/amount"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount" />

        <LinearLayout
            android:id="@+id/layout_liner01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amountValue">

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="50dp"
                android:text="@string/to"
                android:textSize="14sp" />
        </LinearLayout>
        <!--        app:ccp_customMasterCountries="AED,AFN,ALL,AMD,ANG,AOA,ARS,AUD,AWG,AZN,BAM,BBD,BDT,BGN,BHD,BIF,BMD,BND,BOB,BRL,BSD,BTC,BTN,BWP,BYN,BZD,CAD,CDF,CHF,CLF,CLP,CNH,CNY,COP,CRC,CUC,CUP,CVE,CZK,DJF,DKK,DOP,DZD,EGP,ERN,ETB,EUR,FJD,FKP,GBP,GEL,GGP,GHS,GIP,GMD,GNF,GTQ,GYD,HKD,HNL,HRK,HTG,HUF,IDR,ILS,IMP,INR,IQD,IRR,ISK,JEP,JMD,JOD,JPY,KES,KGS,KHR,KMF,KPW,KRW,KWD,KYD,KZT,LAK,LBP,LKR,LRD,LSL,LYD,MAD,MDL,MGA,MKD,MMK,MNT,MOP,MRU,MUR,MVR,MWK,MXN,MYR,MZN,NAD,NGN,NIO,NOK,NPR,NZD,OMR,PAB,PEN,PGK,PHP,PKR,PLN,PYG,QAR,RON,RSD,RUB,RWF,SAR,SBD,SCR,SDG,-->
        <!--        SEK,SGD,SHP,SLL,SOS,SRD,SSP,STD,STN,SVC,SYP,SZL,THB,TJS,TMT,TND,TOP,TRY,TTD,TWD,TZS,UAH,UGX,USD,UYU,UZS,VES,VUV,WST,XAF,XAG,XAU,XCD,XDR,XOF,XPD,XPF,XPT,YER,ZAR,ZMW,ZWL"-->

        <!--        <com.hbb20.CountryCodePicker-->
        <!--            android:id="@+id/countryCodePicker_from"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="20dp"-->
        <!--            android:layout_marginVertical="20dp"-->
        <!--            android:background="@drawable/background_edittext"-->
        <!--            android:gravity="center"-->
        <!--            android:paddingHorizontal="10dp"-->
        <!--            app:ccp_autoDetectCountry="true"-->
        <!--            app:ccp_showNameCode="true"-->
        <!--            app:ccp_showPhoneCode="false"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/iv_exchange"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/layout_liner01"-->

        <!--            />-->
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_edittext"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toStartOf="@id/iv_exchange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_liner01">

            <Spinner
                android:id="@+id/spFromCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/currency_codes" />
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_exchange"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:src="@drawable/ic_exchange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_liner01"
            tools:ignore="ContentDescription" />

        <!--        <com.hbb20.CountryCodePicker-->
        <!--            android:id="@+id/countryCodePicker_to"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="20dp"-->
        <!--            android:layout_marginVertical="20dp"-->
        <!--            android:background="@drawable/background_edittext"-->
        <!--            android:gravity="center"-->
        <!--            android:paddingHorizontal="10dp"-->
        <!--            app:ccp_autoDetectCountry="false"-->
        <!--            app:ccp_defaultNameCode="US"-->
        <!--            app:ccp_showNameCode="true"-->
        <!--            app:ccp_showPhoneCode="false"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@id/iv_exchange"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/layout_liner01" />-->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/background_edittext"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_exchange"
            app:layout_constraintTop_toBottomOf="@id/layout_liner01">

            <Spinner
                android:id="@+id/spToCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/currency_codes" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:text="@string/convert"
            android:textAllCaps="true"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>